samples/_failures_safe/1761318126_dbe95d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a3a9c5d1.c: In function ‘main’:
./samples/SAFE/__tmp_a3a9c5d1.c:153:40: error: expected ‘)’ at end of input
  153 |                 } else if (status == -1
      |                           ~            ^
      |                                        )
./samples/SAFE/__tmp_a3a9c5d1.c:153:17: error: expected declaration or statement at end of input
  153 |                 } else if (status == -1
      |                 ^
./samples/SAFE/__tmp_a3a9c5d1.c:153:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_a3a9c5d1.c:153:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_a3a9c5d1.c:153:17: error: expected declaration or statement at end of input
